Eclipse1/SalesforceCI/ Enterprise/objects/Connect_Meeting_Invite__c.object
<CustomObject>
    <description>Connect Your Rep (CYR): A contact or user invited to a Meeting.</description>
    <fields>
        <fullName>Attendance_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Duration the person was in the meeting, in minutes.</description>
        <label>Attendance Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_Time__c</fullName>
        <description>When they first logged into the meeting.</description>
        <label>Attendance Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did they attend the meeting?</description>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connect_Meeting__c</fullName>
        <description>The meeting this invite is attached to.</description>
        <label>Meeting</label>
        <referenceTo>Connect_Meeting__c</referenceTo>
        <relationshipLabel>Meeting Invites</relationshipLabel>
        <relationshipName>Connect_Meeting_Invites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact this invite was sent to.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Connect_Meeting_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User this invite was sent to.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connect_Meeting_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting Invite</label>
    <nameField>
        <displayFormat>CYRM{0000000}</displayFormat>
        <label>Meeting Invite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Invites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>